--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="one"></div>
 				<div class="one"></div>
 				<div class="one"></div>
-				<div class="one"></div>
+				<div class="one"><img src="star.png"></div>
 				<div class="one" style="background-color: blue;"></div>
 				<div class="one" style="background-color: blue;"></div>
 				<div class="one"></div>
@@ -71,7 +71,7 @@
 				</div>
 				<div class="two1">
 					<div class="two2"></div>
-					<div class="two2"></div>
+					<div class="two2"><img src="star.png"></div>
 					<div class="two2"></div>
 					<div class="two2"></div>
 					<div class="two2"></div>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 
-			<div class="row2-col2" style="color: linear-gradient(black,pink); font-weight: bold; font-size: 30px; padding-top: 30px;">HOME</div>
+			<div class="row2-col2 box" style="color: linear-gradient(black,pink); font-weight: bold; font-size: 22px; padding-top: 20px;">HOME</div>
 
 			<div class="row2-col3">
 					<div class="two1">
@@ -87,7 +87,7 @@
 					<div class="two2"></div>
 					<div class="two2"></div>
 					<div class="two2"></div>
-					<div class="two2"></div>
+					<div class="two2"><img src="star.png"></div>
 					<div class="two2"></div>
 				</div>
 				<div class="two1">
@@ -134,7 +134,7 @@
 				<div class="one"></div>
 				<div class="one" style="background-color: yellow;"></div>
 				<div class="one" style="background-color: yellow;"></div>
-				<div class="one"></div>
+				<div class="one"><img src="star.png"></div>
 				<div class="one"></div>
 				<div class="one"></div>
 				<div class="one"></div>
